[metadata]
name = deterministic-rsa-keygen
version = 0.0.1
author = Mauricio Reyes
author_email = mreyes@talpor.com
description = generate deterministic RSA key pair and perform encrypt and decrypt operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slashpass/deterministic-rsa-keygen
project_urls =
    Bug Tracker = https://github.com/slashpass/deterministic-rsa-keygen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires=
    pycryptodome>=3.10
